[gd_scene load_steps=26 format=3 uid="uid://ocgj24hkyqfm"]

[ext_resource type="PackedScene" uid="uid://cgqrwgbhcpkd3" path="res://Content/Scenes/Stage/Interfaces/hud.tscn" id="1_tghqr"]
[ext_resource type="PackedScene" uid="uid://bipawj12cbpmb" path="res://Content/Scenes/Stage/Handler/resourceHandler.tscn" id="2_67fy2"]
[ext_resource type="PackedScene" uid="uid://c201rvxgq5e35" path="res://Content/Scenes/Stage/stage_1_scenario.tscn" id="2_n5lwx"]
[ext_resource type="Texture2D" uid="uid://ba87jwjdotbrl" path="res://Content/Graphics/Background/stage1.png" id="3_22536"]
[ext_resource type="Script" path="res://Content/Scripts/Stage/Interfaces/Camera.gd" id="4_b0td4"]
[ext_resource type="Resource" uid="uid://dak7qnv3rx26r" path="res://Content/Scripts/Resources/unitData/allyBase.tres" id="5_67dra"]
[ext_resource type="Script" path="res://Content/Scripts/Stage/Components/baseStateComponent.gd" id="5_d50ui"]
[ext_resource type="Script" path="res://Content/Scripts/Stage/Components/States/idle.gd" id="6_1or2k"]
[ext_resource type="Resource" uid="uid://bs8061ffaprvh" path="res://Content/Scripts/Resources/unitData/enemyBase.tres" id="6_qu5pd"]
[ext_resource type="PackedScene" uid="uid://df442pebjo11j" path="res://Content/Scenes/Units/enemy/spitter.tscn" id="7_n36hi"]
[ext_resource type="Texture2D" uid="uid://bx21vkanph10n" path="res://Content/Graphics/Sprites/object/base.png" id="10_foypc"]
[ext_resource type="PackedScene" uid="uid://oms4xo8wpeo7" path="res://Content/Scenes/Units/ally/knight.tscn" id="12_aec61"]
[ext_resource type="Script" path="res://Content/Scripts/Stage/Components/base.gd" id="13_p2anb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rnbpd"]
atlas = ExtResource("10_foypc")
region = Rect2(1193.8, 0, 342.2, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvy7y"]
atlas = ExtResource("10_foypc")
region = Rect2(1.00006, -0.182327, 254.71, 299.182)

[sub_resource type="Curve2D" id="Curve2D_6u51i"]
_data = {
"points": PackedVector2Array(-217.789, -0.0768551, 0, 0, -892.026, 73.6852, 0, 0, 0, 0, -867.026, 73.694, -56.7372, 18.334, 56.7372, -18.334, -685.027, 77.7583, -41.381, 2.65508, 41.381, -2.65508, -548.014, 40.8066, 0, 0, 0, 0, -372.348, 33.8435, -69.3012, 13.4106, 69.3012, -13.4106, -330.01, 28.8835, -144.251, 2.07042, 144.251, -2.07042, 9.99929, 2.00353, -96.1615, -14.1761, 96.1615, 14.1761, 372.983, 48.1316, -90.5054, -12.0528, 90.5054, 12.0528, 556.985, 41.1966, -114.548, -8.5257, 114.548, 8.5257, 832.978, 61.862, 0, 0, 0, 0, 931.977, 65.3289)
}
point_count = 11

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r5bsn"]
size = Vector2(82.0849, 180.995)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nq36a"]
size = Vector2(113.445, 149.491)

[sub_resource type="Curve2D" id="Curve2D_cwoqo"]
_data = {
"points": PackedVector2Array(-86.5579, -1.88049, 0, 0, -1302, 260.218, 0, 0, 0, 0, -1169, 259, -42.7018, 10.4882, 42.7018, -10.4882, -860, 253, -41.2034, -8.24069, 41.2034, 8.24069, -697, 247, -59.1831, -5.53326, 59.1831, 5.53326, -515, 264.218, -91.3967, -15.7322, 91.3967, 15.7322, -243, 240.218, -48.6817, -7.64851, 48.6817, 7.64851, 64, 241, -102.238, -20.1298, 102.238, 20.1298, 211, 253, -32.8434, -0.529732, 32.8434, 0.529732, 380, 252, 0, 0, 0, 0, 539, 273, -75.6643, 11.2373, 75.6643, -11.2373, 692, 278.218)
}
point_count = 11

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o67e3"]
size = Vector2(113, 216)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gih4f"]
size = Vector2(143.133, 124.965)

[sub_resource type="Gradient" id="Gradient_vnvry"]
colors = PackedColorArray(0.658824, 0.380392, 0.25098, 1, 0.307909, 0.160637, 0.0915456, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_r8qrj"]
gradient = SubResource("Gradient_vnvry")
fill_from = Vector2(0.509174, 0)
fill_to = Vector2(0.5, 1)

[sub_resource type="Gradient" id="Gradient_xwco7"]
colors = PackedColorArray(0.424007, 0.519573, 0.870754, 1, 0.229448, 0.145847, 0.306612, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_hpwid"]
gradient = SubResource("Gradient_xwco7")
width = 128
height = 128
fill_from = Vector2(0, 0.490826)
fill_to = Vector2(1, 0.486239)

[node name="stage1" type="Node2D"]

[node name="resourceHandler" parent="." instance=ExtResource("2_67fy2")]

[node name="stage_1_scenario" parent="resourceHandler" instance=ExtResource("2_n5lwx")]

[node name="HUD" parent="resourceHandler" instance=ExtResource("1_tghqr")]

[node name="Camera2D" type="Camera2D" parent="resourceHandler"]
script = ExtResource("4_b0td4")

[node name="laneSetter" type="Node2D" parent="resourceHandler"]

[node name="enemyBase" type="Sprite2D" parent="resourceHandler/laneSetter"]
position = Vector2(1010, 89)
scale = Vector2(1.5, 1.5)
texture = SubResource("AtlasTexture_rnbpd")
script = ExtResource("13_p2anb")
status = ExtResource("6_qu5pd")

[node name="allyBase" type="Sprite2D" parent="resourceHandler/laneSetter"]
position = Vector2(-1113, 67)
scale = Vector2(1.5, 1.5)
texture = SubResource("AtlasTexture_wvy7y")
script = ExtResource("13_p2anb")
status = ExtResource("5_67dra")

[node name="topLane" type="Path2D" parent="resourceHandler/laneSetter"]
position = Vector2(-48, 56)
rotation = -0.000352888
curve = SubResource("Curve2D_6u51i")

[node name="allyBase" type="PathFollow2D" parent="resourceHandler/laneSetter/topLane"]
position = Vector2(-892.026, 73.6852)
rotates = false
cubic_interp = false
loop = false

[node name="hitbox" type="Area2D" parent="resourceHandler/laneSetter/topLane/allyBase"]
rotation = -0.000351868
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="resourceHandler/laneSetter/topLane/allyBase/hitbox"]
shape = SubResource("RectangleShape2D_r5bsn")

[node name="stateComponent" type="Node2D" parent="resourceHandler/laneSetter/topLane/allyBase" node_paths=PackedStringArray("initial_state")]
script = ExtResource("5_d50ui")
initial_state = NodePath("Idle")

[node name="Idle" type="Node2D" parent="resourceHandler/laneSetter/topLane/allyBase/stateComponent"]
script = ExtResource("6_1or2k")

[node name="enemyBase" type="PathFollow2D" parent="resourceHandler/laneSetter/topLane"]
position = Vector2(931.977, 65.329)
progress = 1850.76
rotates = false
cubic_interp = false
loop = false

[node name="hitbox" type="Area2D" parent="resourceHandler/laneSetter/topLane/enemyBase"]
rotation = -0.000351868
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="resourceHandler/laneSetter/topLane/enemyBase/hitbox"]
shape = SubResource("RectangleShape2D_nq36a")

[node name="stateComponent" type="Node2D" parent="resourceHandler/laneSetter/topLane/enemyBase" node_paths=PackedStringArray("initial_state")]
script = ExtResource("5_d50ui")
initial_state = NodePath("Idle")

[node name="Idle" type="Node2D" parent="resourceHandler/laneSetter/topLane/enemyBase/stateComponent"]
script = ExtResource("6_1or2k")

[node name="knight" parent="resourceHandler/laneSetter/topLane" instance=ExtResource("12_aec61")]
position = Vector2(-892.026, 73.6852)

[node name="spitter" parent="resourceHandler/laneSetter/topLane" instance=ExtResource("7_n36hi")]
position = Vector2(14.205, 1.95328)
rotation = 0.000351868
progress = 925.38
rotates = false

[node name="bottomLane" type="Path2D" parent="resourceHandler/laneSetter"]
position = Vector2(251, -40.218)
curve = SubResource("Curve2D_cwoqo")

[node name="allyBase" type="PathFollow2D" parent="resourceHandler/laneSetter/bottomLane"]
position = Vector2(-1302, 260.218)
rotates = false
cubic_interp = false
loop = false

[node name="hitbox" type="Area2D" parent="resourceHandler/laneSetter/bottomLane/allyBase"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="resourceHandler/laneSetter/bottomLane/allyBase/hitbox"]
position = Vector2(0, -72)
shape = SubResource("RectangleShape2D_o67e3")

[node name="stateComponent" type="Node2D" parent="resourceHandler/laneSetter/bottomLane/allyBase" node_paths=PackedStringArray("initial_state")]
script = ExtResource("5_d50ui")
initial_state = NodePath("Idle")

[node name="Idle" type="Node2D" parent="resourceHandler/laneSetter/bottomLane/allyBase/stateComponent"]
script = ExtResource("6_1or2k")

[node name="enemyBase" type="PathFollow2D" parent="resourceHandler/laneSetter/bottomLane"]
position = Vector2(692, 278.218)
progress = 2003.33
rotates = false
cubic_interp = false
loop = false

[node name="hitbox" type="Area2D" parent="resourceHandler/laneSetter/bottomLane/enemyBase"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="resourceHandler/laneSetter/bottomLane/enemyBase/hitbox"]
shape = SubResource("RectangleShape2D_gih4f")

[node name="stateComponent" type="Node2D" parent="resourceHandler/laneSetter/bottomLane/enemyBase" node_paths=PackedStringArray("initial_state")]
script = ExtResource("5_d50ui")
initial_state = NodePath("Idle")

[node name="Idle" type="Node2D" parent="resourceHandler/laneSetter/bottomLane/enemyBase/stateComponent"]
script = ExtResource("6_1or2k")

[node name="ground" type="Sprite2D" parent="."]
position = Vector2(-0.499964, 177.5)
scale = Vector2(40.7656, 6.23438)
texture = SubResource("GradientTexture2D_r8qrj")

[node name="sky" type="Sprite2D" parent="."]
position = Vector2(0.999951, -109)
scale = Vector2(20.3906, 5.51563)
texture = SubResource("GradientTexture2D_hpwid")

[node name="background" type="Sprite2D" parent="."]
position = Vector2(1, 59.0003)
scale = Vector2(1.7, 1.7)
texture = ExtResource("3_22536")

[connection signal="ally_base_hitted" from="resourceHandler/laneSetter/topLane/allyBase/stateComponent" to="resourceHandler/laneSetter/allyBase" method="_on_state_component_ally_base_hitted"]
[connection signal="enemy_base_hitted" from="resourceHandler/laneSetter/topLane/enemyBase/stateComponent" to="resourceHandler/laneSetter/enemyBase" method="_on_state_component_enemy_base_hitted"]
[connection signal="ally_base_hitted" from="resourceHandler/laneSetter/bottomLane/allyBase/stateComponent" to="resourceHandler/laneSetter/allyBase" method="_on_state_component_ally_base_hitted"]
[connection signal="enemy_base_hitted" from="resourceHandler/laneSetter/bottomLane/enemyBase/stateComponent" to="resourceHandler/laneSetter/enemyBase" method="_on_state_component_enemy_base_hitted"]
